<resources>
    <string name="app_name">Location Alarm</string>
    <string name="action_settings">Settings</string>
    <string name="todo">Settings</string>
    <string name="todoa">TODO</string>
    <string name="google_android_map_api_key">AIzaSyBRPspODNwkKA-27fjcuQT60qD_pxSf39Y</string>
    <string name="day1">Monday</string>
    <string name="day2">Tuesday</string>
    <string name="day3">Wednesday</string>
    <string name="day4">Thursday</string>
    <string name="day5">Friday</string>
    <string name="day6">Saturday</string>
    <string name="day7">Sunday</string>
    <string name="allSelect">Select All</string>
    <string name="selectlocation">Select Location</string>
    <string name="add">Add</string>

</resources>
