<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/selectall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="selectAll"
            android:text="@string/allSelect"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/sunday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/day7"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/saturday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/day6"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/friday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/day5"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/thursday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/day4"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/wednesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/day3"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/tuesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/day2"
            android:textSize="24sp" />

        <CheckBox
            android:id="@+id/monday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/day1"
            android:textSize="24sp" />


    </LinearLayout>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/add"
        android:onClick="writeToFile"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button4"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="26dp"
        android:text="Name" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:ems="10"
        android:inputType="textPersonName" />

</RelativeLayout>